--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -66,7 +66,8 @@ INTERFACE_TESTS= test-interfaces-c
 test_interfaces_c_LDADD = \
 	$(top_builddir)/fflas-ffpack/interfaces/libs/libfflas_c.la \
 	$(top_builddir)/fflas-ffpack/interfaces/libs/libffpack_c.la \
-	-lm -lstdc++
+	-lstdc++
+	
 else
 LDADD = $(CBLAS_LIBS) $(GIVARO_LIBS) $(CUDA_LIBS) $(PARLIBS)
 endif
