checkers install in Makefiles

--- a/configure.ac
+++ b/configure.ac
@@ -356,6 +356,7 @@ fflas-ffpack/utils/Makefile
 fflas-ffpack/paladin/Makefile
 fflas-ffpack/interfaces/Makefile
 fflas-ffpack/interfaces/libs/Makefile
+fflas-ffpack/checkers/Makefile
 doc/Makefile
 tests/Makefile
 tests/data/Makefile
