--- a/.gitignore
+++ b/.gitignore
@@ -6,9 +6,18 @@ autom4te.cache
 benchmarks/Makefile
 benchmarks/Makefile.in
 build-aux
+*.o
+*.lo
+*.la
+*~
+*.libs
+*.trs
+*log
+*status
+*cache
+*aux
 config.h
 config.h.in
-config.log
 config.status
 configure
 doc/Makefile
@@ -66,7 +75,6 @@ macros/ltoptions.m4
 macros/ltsugar.m4
 macros/ltversion.m4
 macros/lt~obsolete.m4
-optim.log
 optimiser/Makefile
 optimiser/Makefile.in
 stamp-h1
@@ -75,69 +83,26 @@ tests/Makefile.in
 tests/data/Makefile
 tests/data/Makefile.in
 benchmarks/benchmark-fgemm
-benchmarks/benchmark-fgemm.o
 benchmarks/benchmark-pluq
-benchmarks/benchmark-pluq.o
 tests/regression-check
-tests/regression-check.log
-tests/regression-check.o
-tests/regression-check.trs
 tests/test-compressQ
-tests/test-compressQ.log
-tests/test-compressQ.o
-tests/test-compressQ.trs
 tests/test-det
-tests/test-det.log
-tests/test-det.o
-tests/test-det.trs
 tests/test-echelon
-tests/test-echelon.o
 tests/test-fadd
-tests/test-fadd.log
-tests/test-fadd.o
-tests/test-fadd.trs
 tests/test-fgemm
-tests/test-fgemm.log
-tests/test-fgemm.o
-tests/test-fgemm.trs
 tests/test-fger
-tests/test-fger.log
-tests/test-fger.o
-tests/test-fger.trs
 tests/test-finit
-tests/test-finit.log
-tests/test-finit.o
-tests/test-finit.trs
 tests/test-fscal
-tests/test-fscal.log
-tests/test-fscal.o
-tests/test-fscal.trs
 tests/test-ftrsm
-tests/test-ftrsm.o
 tests/test-lu
-tests/test-lu.o
 tests/test-multifile
-tests/test-multifile.log
-tests/test-multifile.trs
-tests/test-multifile1.o
-tests/test-multifile2.o
 tests/test-rankprofiles
-tests/test-rankprofiles.log
-tests/test-rankprofiles.o
-tests/test-rankprofiles.trs
-benchmarks/benchmark-charpoly.o
-benchmarks/benchmark-dgemm.o
-benchmarks/benchmark-dgetrf.o
-benchmarks/benchmark-dgetri.o
-benchmarks/benchmark-dtrsm.o
-benchmarks/benchmark-dtrtri.o
-benchmarks/benchmark-fgemm-mp.o
+tests/test-bini-p
+tests/test-charpoly-check
+tests/test-fgemm-check
+tests/test-ftrsm-check
+tests/test-invert-check
+tests/test-permutations
+tests/test-pluq-check
+tests/test-simd
 benchmarks/benchmark-ftrsm
-benchmarks/benchmark-ftrsm-mp.o
-benchmarks/benchmark-ftrsm.o
-benchmarks/benchmark-ftrtri.o
-benchmarks/benchmark-inverse.o
-benchmarks/benchmark-lqup-mp.o
-benchmarks/benchmark-lqup.o
-benchmarks/benchmark-wino.o
-benchmarks/benchmark_sgemm-benchmark-dgemm.o
