Move the autotuning from configure to a makefile target Cleanup of wingrad.C

--- a/configure.ac
+++ b/configure.ac
@@ -359,6 +359,7 @@ fflas-ffpack/paladin/Makefile
 fflas-ffpack/interfaces/Makefile
 fflas-ffpack/interfaces/libs/Makefile
 fflas-ffpack/checkers/Makefile
+autotune/Makefile
 doc/Makefile
 tests/Makefile
 tests/data/Makefile
