--- a/Makefile.am
+++ b/Makefile.am
@@ -24,7 +24,7 @@
 
 ACLOCAL_AMFLAGS = -I macros
 
-SUBDIRS=fflas-ffpack tests doc benchmarks macros optimiser examples
+SUBDIRS= autotune fflas-ffpack tests doc benchmarks macros optimiser examples
 
 pkgconfigdir = $(libdir)/pkgconfig
 pkgconfig_DATA = fflas-ffpack.pc
@@ -41,6 +41,9 @@ docs_dev:doc/fflas-ffpack-dev-html/index.html
 
 doc/fflas-ffpack-dev-html/index.html:
 	(cd doc; ${MAKE} docs_dev)
+
+autotune:
+	(cd autotune; ${MAKE} autotune)
 
 perfpublisher: benchmarks/perfpublisher tests/perfpublisher
 
