--- a/.gitignore
+++ b/.gitignore
@@ -75,8 +75,12 @@ macros/ltoptions.m4
 macros/ltsugar.m4
 macros/ltversion.m4
 macros/lt~obsolete.m4
-optimiser/Makefile
-optimiser/Makefile.in
+autotune/Makefile
+autotune/Makefile.in
+autotune/winograd-modular-double
+autotune/winograd-modular-float
+autotune/winograd-modularbalanced-double
+autotune/winograd-modularbalanced-float
 stamp-h1
 tests/Makefile
 tests/Makefile.in
