--- a/fflas-ffpack/Makefile.am
+++ b/fflas-ffpack/Makefile.am
@@ -30,4 +30,4 @@ pkginclude_HEADERS = config-blas.h   \
 		     fflas-ffpack.h  \
 		     config.h \
 		     fflas-ffpack-config.h \
-		     fflas-ffpack-optimise.h
+		     fflas-ffpack-thresholds.h
