--- a/.gitignore
+++ b/.gitignore
@@ -110,4 +110,6 @@ tests/test-invert-check
 tests/test-permutations
 tests/test-pluq-check
 tests/test-simd
+tests/test-charpoly
+tests/test-maxdelayeddim
 benchmarks/benchmark-ftrsm
