--- a/configure.ac
+++ b/configure.ac
@@ -90,10 +90,10 @@ WARN_CFLAGS="-Wall"
 #TODO use -fast for icc, -ipa for eko...
 if test "x$DBG" = "xyes" ; then
 	DEFAULT_CFLAGS="-O0 ${DEFAULT_CFLAGS}" #those are CXXFLAGS
-	DEBUG_CFLAGS="${DEBUG_CFLAGS} -DDEBUG -DFFLASFFPACK_DEBUG"
+	DEBUG_CFLAGS="${DEBUG_CFLAGS} -DFFLASFFPACK_DEBUG"
 else
 	DEFAULT_CFLAGS="-O2 ${DEFAULT_CFLAGS}"
-	DEBUG_CFLAGS="-DNDEBUG -UFFLASFFPACK_DEBUG"
+	DEBUG_CFLAGS="-UFFLASFFPACK_DEBUG"
 fi
 
 if test "x$PROF" = "xyes" ; then
