cleaning up the AM_CXXFLAGS and AM_CPPFLAGS from too many -I

--- a/benchmarks/Makefile.am
+++ b/benchmarks/Makefile.am
@@ -25,7 +25,7 @@ benchmarks:  $(BENCHMARKS)
 
 AM_CPPFLAGS=-I$(top_srcdir) -g
 AM_CXXFLAGS = @DEFAULT_CFLAGS@
-AM_CPPFLAGS +=  $(CBLAS_FLAG) $(GIVARO_CFLAGS) $(OPTFLAGS) -I$(top_srcdir)/fflas-ffpack/utils/ -I$(top_srcdir)/fflas-ffpack/fflas/  -I$(top_srcdir)/fflas-ffpack/ffpack  -I$(top_srcdir)/fflas-ffpack/field $(CUDA_CFLAGS) $(PARFLAGS)
+AM_CPPFLAGS +=  $(CBLAS_FLAG) $(GIVARO_CFLAGS) $(OPTFLAGS) $(CUDA_CFLAGS) $(PARFLAGS)
 LDADD = $(CBLAS_LIBS) $(GIVARO_LIBS) $(CUDA_LIBS)
 AM_LDFLAGS=-static $(PARLIBS)
 
