--- a/configure.ac
+++ b/configure.ac
@@ -174,11 +174,11 @@ echo "     START  FFLAS-FFPACK CONFIG                "
 echo "-----------------------------------------------"
 
 FF_CHECK_OMP
-# checkes which SIMD instructions are available and defines HAVE_{SSE_4_1,AVX,AVX2}_INSTRUCTIONS and compiler flags
-CUSTOM_SIMD="no"
-FF_CHECK_SIMD
-#FF_CHECK_SSE
-#FF_CHECK_AVX
+dnl check which SIMD instructions are available and defines HAVE_{SSE_4_1,AVX,AVX2}_INSTRUCTIONS and compiler flags
+dnl CUSTOM_SIMD="no"
+dnl FF_CHECK_SIMD
+dnl FF_CHECK_SSE
+dnl FF_CHECK_AVX
 dnl arch=`echo $target | cut -d"-" -f1`
 dnl if [[ "x$CUSTOM_SIMD" = "xno" ]] ; then
 dnl    AX_CHECK_X86_FEATURES([][])
@@ -187,7 +187,6 @@ dnl    CXXFLAGS="${CXXFLAGS} ${SSEFLAGS} ${AVXFLAGS}"
 dnl fi
 dnl gcc-4.9.2 bug See https://trac.sagemath.org/ticket/17635#comment:178
 AS_IF([ test  "x$CCNAM" = "xgcc492" ],[CXXFLAGS="${CXXFLAGS} -fpermissive"],[])
-echo "CCNAM = $CCNAM $CUSTOM_SIMD"
 
 dnl With GCC's default ABI version, a __m128 or __m256 are the same types and therefore we cannot
 dnl have overloads for both types without linking error.
