potrf->sytrf. Done debugging.

--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -54,7 +54,7 @@ BASIC_TESTS =               \
 		test-fger           \
 		test-ftrsm          \
 		test-fsyrk          \
-		test-fpotrf          \
+		test-fsytrf          \
 		test-multifile      \
 		test-maxdelayeddim \
 		regression-check
@@ -134,7 +134,7 @@ test_charpoly_SOURCES          = test-charpoly.C
 #  testeur_fgemm_SOURCES          = testeur_fgemm.C
 test_ftrsm_SOURCES             = test-ftrsm.C
 test_fsyrk_SOURCES             = test-fsyrk.C
-test_fpotrf_SOURCES             = test-fpotrf.C
+test_fsytrf_SOURCES            = test-fsytrf.C
 #  test_redechelon_SOURCES        = test-redechelon.C
 #  testeur_ftrsm_SOURCES          = testeur_ftrsm.C
 #  test_ftrtri_SOURCES            = test-ftrtri.C
