Finished base case for both fsytrf and fsyrk. add a benchmark-fsyrk.

--- a/.gitignore
+++ b/.gitignore
@@ -37,7 +37,25 @@ autotune/winograd-modularbalanced-float
 autotune/pluq
 stamp-h1
 benchmarks/benchmark-fgemm
+benchmarks/benchmark-fgemv-mp
+benchmarks/benchmark-dgemm
+benchmarks/benchmark-fgemm-mp
 benchmarks/benchmark-pluq
+benchmarks/benchmark-lqup
+benchmarks/benchmark-lqup-mp
+benchmarks/benchmark-ftrsm
+benchmarks/benchmark-dtrsm
+benchmarks/benchmark-dgetrf
+benchmarks/benchmark-checkers
+benchmarks/benchmark-fsyrk
+benchmarks/benchmark-ftrtri
+benchmarks/benchmark-dtrtri
+benchmarks/benchmark-dgetri
+benchmarks/benchmark-fsytrf
+benchmarks/benchmark-fspmv
+benchmarks/benchmark-fspmm
+benchmarks/benchmark-inverse
+benchmarks/benchmark-charpoly
 tests/regression-check
 tests/test-compressQ
 tests/test-det
@@ -49,6 +67,7 @@ tests/test-finit
 tests/test-fscal
 tests/test-ftrsm
 tests/test-fsyrk
+tests/test-fsytrf
 tests/test-lu
 tests/test-multifile
 tests/test-rankprofiles
@@ -62,4 +81,3 @@ tests/test-pluq-check
 tests/test-simd
 tests/test-charpoly
 tests/test-maxdelayeddim
-benchmarks/benchmark-ftrsm
