--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -47,6 +47,7 @@ BASIC_TESTS =               \
 		test-fscal          \
 		test-fgemm          \
 		test-pluq-check     \
+		test-det-check     \
 		test-fgemm-check    \
 		test-ftrsm-check    \
 		test-invert-check   \
@@ -114,6 +115,7 @@ test_lu_SOURCES              = test-lu.C
 #test_lqup2_SOURCES              = test-lqup2.C
 test_det_SOURCES               = test-det.C
 test_pluq_check_SOURCES = test-pluq-check.C
+test_det_check_SOURCES = test-det-check.C
 test_fgemm_check_SOURCES = test-fgemm-check.C
 test_ftrsm_check_SOURCES = test-ftrsm-check.C
 test_invert_check_SOURCES = test-invert-check.C
