add a Freivalds checkx

--- a/benchmarks/Makefile.am
+++ b/benchmarks/Makefile.am
@@ -23,7 +23,7 @@
 SUBDIRS =
 benchmarks:  $(BENCHMARKS)
 
-AM_CPPFLAGS=-I$(top_srcdir) -g
+AM_CPPFLAGS=-I$(top_srcdir) -g -pg
 AM_CXXFLAGS = @DEFAULT_CFLAGS@ -pg
 AM_CPPFLAGS +=  $(CBLAS_FLAG) $(GIVARO_CFLAGS) $(OPTFLAGS) $(CUDA_CFLAGS) $(PARFLAGS)
 LDADD = $(CBLAS_LIBS) $(GIVARO_LIBS) $(CUDA_LIBS)
