fast also lower

--- a/tutorial/Makefile.am
+++ b/tutorial/Makefile.am
@@ -28,8 +28,9 @@ AM_CXXFLAGS +=  $(CBLAS_FLAG) $(GIVARO_CFLAGS) $(OPTFLAGS) $(CUDA_CFLAGS) $(PARF
 LDADD = $(CBLAS_LIBS) $(GIVARO_LIBS) $(CUDA_LIBS)
 AM_LDFLAGS=-static $(PARLIBS)
 
-EXAMPLES = 2x2-fgemm 101-fgemm 2x2-pluq
+EXAMPLES = 2x2-fgemm 101-fgemm 2x2-pluq 2x2-ftrsv
 2x2_fgemm_SOURCES = 2x2-fgemm.C
+2x2_ftrsv_SOURCES = 2x2-ftrsv.C
 101_fgemm_SOURCES = 101-fgemm.C
 2x2_pluq_SOURCES = 2x2-pluq.C
 
