--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -53,6 +53,7 @@ BASIC_TESTS =               \
 		test-charpoly-check \
 		test-fger           \
 		test-ftrsm          \
+		test-ftrmm          \
 		test-fsyrk          \
 		test-fsytrf          \
 		test-multifile      \
@@ -134,6 +135,7 @@ test_charpoly_SOURCES          = test-charpoly.C
 #  test_redcolechelon_SOURCES     = test-redcolechelon.C
 #  testeur_fgemm_SOURCES          = testeur_fgemm.C
 test_ftrsm_SOURCES             = test-ftrsm.C
+test_ftrmm_SOURCES             = test-ftrmm.C
 test_fsyrk_SOURCES             = test-fsyrk.C
 test_fsytrf_SOURCES            = test-fsytrf.C
 #  test_redechelon_SOURCES        = test-redechelon.C
