new In/Out routines to read/write/print from dense/sms/binary/Maple/Sage formats

--- a/fflas-ffpack/utils/Makefile.am
+++ b/fflas-ffpack/utils/Makefile.am
@@ -30,6 +30,7 @@ pkgincludesub_HEADERS= 	\
 	fflas_randommatrix.h	\
 	flimits.h 			\
 	Matio.h  			\
+	fflas_io.h  			\
 	bit_manipulation.h 	\
 	print-utils.h		\
 	timer.h				\
