--- a/tutorial/Makefile.am
+++ b/tutorial/Makefile.am
@@ -28,11 +28,11 @@ AM_CXXFLAGS +=  $(CBLAS_FLAG) $(GIVARO_CFLAGS) $(OPTFLAGS) $(CUDA_CFLAGS) $(PARF
 LDADD = $(CBLAS_LIBS) $(GIVARO_LIBS) $(CUDA_LIBS)
 AM_LDFLAGS=-static $(PARLIBS)
 
-EXAMPLES = 2x2-fgemm 101-fgemm 2x2-pluq 2x2-ftrsv
-2x2_fgemm_SOURCES = 2x2-fgemm.C
-2x2_ftrsv_SOURCES = 2x2-ftrsv.C
-101_fgemm_SOURCES = 101-fgemm.C
-2x2_pluq_SOURCES = 2x2-pluq.C
+EXAMPLES = brouillon linear_algebra_101 linear_algebra_101_lvl1
+brouillon_SOURCES = brouillon.C
+linear_algebra_101_SOURCES = linear_algebra_101.C
+linear_algebra_101_lvl1_SOURCES = linear_algebra_101_lvl1.C
+
 
 CLEANFILES = $(EXAMPLES) 
 
