Modified Makefile.am according to recent name changes. Corrected comments in fflas_101_lvl1.C .

--- a/tutorial/Makefile.am
+++ b/tutorial/Makefile.am
@@ -28,10 +28,10 @@ AM_CXXFLAGS +=  $(CBLAS_FLAG) $(GIVARO_CFLAGS) $(OPTFLAGS) $(CUDA_CFLAGS) $(PARF
 LDADD = $(CBLAS_LIBS) $(GIVARO_LIBS) $(CUDA_LIBS)
 AM_LDFLAGS=-static $(PARLIBS)
 
-EXAMPLES = brouillon linear_algebra_101 linear_algebra_101_lvl1
+EXAMPLES = brouillon fflas_101 fflas_101_lvl1
 brouillon_SOURCES = brouillon.C
-linear_algebra_101_SOURCES = linear_algebra_101.C
-linear_algebra_101_lvl1_SOURCES = linear_algebra_101_lvl1.C
+fflas_101_SOURCES = fflas_101.C
+fflas_101_lvl1_SOURCES = fflas_101_lvl1.C
 
 
 CLEANFILES = $(EXAMPLES) 
