--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -165,7 +165,7 @@ test_fdot_SOURCES = test-fdot.C
 test_fadd_SOURCES = test-fadd.C
 test_fscal_SOURCES = test-fscal.C
 test_finit_SOURCES = test-finit.C
-test_sparse_SOURCES = test-sparse.C
+#test_sparse_SOURCES = test-sparse.C
 test_interfaces_c_SOURCES = test-interfaces-c.c
 test_maxdelayeddim_SOURCES = test-maxdelayeddim.C
 #  test_fspmv_SOURCES = test-fspmv.C
