--- a/tutorial/Makefile.am
+++ b/tutorial/Makefile.am
@@ -28,10 +28,10 @@ AM_CXXFLAGS +=  $(CBLAS_FLAG) $(GIVARO_CFLAGS) $(OPTFLAGS) $(CUDA_CFLAGS) $(PARF
 LDADD = $(CBLAS_LIBS) $(GIVARO_LIBS) $(CUDA_LIBS)
 AM_LDFLAGS=-static $(PARLIBS)
 
-EXAMPLES = brouillon fflas_101 fflas_101_lvl1
-brouillon_SOURCES = brouillon.C
+EXAMPLES = fflas_101 fflas_101_lvl1 fflas_101_lvl2
 fflas_101_SOURCES = fflas_101.C
 fflas_101_lvl1_SOURCES = fflas_101_lvl1.C
+fflas_101_lvl2_SOURCES = fflas_101_lvl2.C
 
 
 CLEANFILES = $(EXAMPLES) 
