move all default threshold definition in a single file

--- a/fflas-ffpack/Makefile.am
+++ b/fflas-ffpack/Makefile.am
@@ -31,3 +31,4 @@ pkginclude_HEADERS = config-blas.h   \
 		     config.h \
 		     fflas-ffpack-config.h \
 		     fflas-ffpack-thresholds.h
+		     fflas-ffpack-default-thresholds.h
