fixing tutorials target

--- a/tutorials/Makefile.am
+++ b/tutorials/Makefile.am
@@ -20,23 +20,22 @@
 # ========LICENCE========
 #/
 
-SUBDIRS =
-examples:  $(EXAMPLES)
+tutorials:  $(TUTORIALS)
 
 AM_CXXFLAGS = @DEFAULT_CFLAGS@
 AM_CXXFLAGS +=  $(CBLAS_FLAG) $(GIVARO_CFLAGS) $(OPTFLAGS) $(CUDA_CFLAGS) $(PARFLAGS)
 LDADD = $(CBLAS_LIBS) $(GIVARO_LIBS) $(CUDA_LIBS)
 AM_LDFLAGS=-static $(PARLIBS)
 
-EXAMPLES = 2x2-fgemm 101-fgemm 2x2-pluq 2x2-ftrsv
+TUTORIALS = 2x2-fgemm 101-fgemm 2x2-pluq 2x2-ftrsv
 2x2_fgemm_SOURCES = 2x2-fgemm.C
 2x2_ftrsv_SOURCES = 2x2-ftrsv.C
 101_fgemm_SOURCES = 101-fgemm.C
 2x2_pluq_SOURCES = 2x2-pluq.C
 
-CLEANFILES = $(EXAMPLES) 
+CLEANFILES = $(TUTORIALS) 
 
-EXTRA_PROGRAMS = $(EXAMPLES)
+EXTRA_PROGRAMS = $(TUTORIALS)
 
 define other_compilation
 	$(CXX) $(CXXFLAGS) $(AM_CXXFLAGS) $(OPTFLAGS) $(PARFLAGS) ${INCLUDES} $(AM_CPPFLAGS) $*.C -o $@ $(LDFLAGS) $(LDADD) $(LOADLIBES)
