--- a/autotune/Makefile.am
+++ b/autotune/Makefile.am
@@ -28,11 +28,12 @@ AUTOTUNE_FGEMM = winograd-modular-float winograd-modular-double winograd-modular
 AUTOTUNE_PLUQ = pluq
 AUTOTUNE_CHARPOLY = charpoly-LUK-ArithProg charpoly-Danilevskii-LUK arithprog
 AUTOTUNE_FTRTRI = ftrtri
+AUTOTUNE_FSYTRF = fsytrf
 
-AUTOTUNE = $(AUTOTUNE_FGEMM) $(AUTOTUNE_PLUQ) $(AUTOTUNE_CHARPOLY) $(AUTOTUNE_FTRTRI)
+AUTOTUNE = $(AUTOTUNE_FGEMM) $(AUTOTUNE_PLUQ) $(AUTOTUNE_CHARPOLY) $(AUTOTUNE_FTRTRI) $(AUOTUNE_FSYTRF)
 
 EXTRA_PROGRAMS=$(AUTOTUNE)
-EXTRA_DIST=tune_fgemm.sh tune_pluq.sh tune_charpoly.sh tune_ftrtri.sh
+EXTRA_DIST=tune_fgemm.sh tune_pluq.sh tune_charpoly.sh tune_ftrtri.sh tune_fsytrf.sh
 
 define run_tune_fgemm
 	./tune_fgemm.sh
@@ -46,16 +47,20 @@ endef
 define run_tune_ftrtri
 	./tune_ftrtri.sh
 endef
+define run_tune_fsytrf
+	./tune_fsytrf.sh
+endef
 define merge_thresholds
-	cat fgemm-thresholds.h pluq-threshold.h charpoly-LUK-ArithProg-threshold.h charpoly-Danilevskii-LUK-threshold.h arithprog-blocksize.h ftrtri-threshold.h > ../fflas-ffpack/fflas-ffpack-thresholds.h
+	cat fgemm-thresholds.h pluq-threshold.h charpoly-LUK-ArithProg-threshold.h charpoly-Danilevskii-LUK-threshold.h arithprog-blocksize.h ftrtri-threshold.h fsytrf-threshold.h> ../fflas-ffpack/fflas-ffpack-thresholds.h
 endef	
 
 # This forces the autotune runs to be sequential
-autotune: autotune_fgemm autotune_pluq autotune_charpoly autotune_ftrtri
+autotune: autotune_fgemm autotune_pluq autotune_charpoly autotune_ftrtri autotune_fsytrf
 	${run_tune_fgemm}
 	${run_tune_pluq}
 	${run_tune_charpoly}
 	${run_tune_ftrtri}
+	${run_tune_fsytrf}
 	${merge_thresholds}
 
 # Tune fgemm only
@@ -73,6 +78,11 @@ tune_ftrtri: autotune_ftrtri
 	${run_tune_ftrtri}
 	${merge_thresholds}
 
+# Tune fsytrf only
+tune_fsytrf: autotune_fsytrf
+	${run_tune_fsytrf}
+	${merge_thresholds}
+
 tune_charpoly: autotune_charpoly
 	${run_tune_charpoly}
 	${merge_thresholds}
@@ -83,16 +93,19 @@ autotune_pluq: $(AUTOTUNE_PLUQ:%=%$(EXEEXT))
 
 autotune_ftrtri: $(AUTOTUNE_FTRTRI:%=%$(EXEEXT))
 
+autotune_fsytrf: $(AUTOTUNE_FSYTRF:%=%$(EXEEXT))
+
 autotune_charpoly: $(AUTOTUNE_CHARPOLY:%=%$(EXEEXT))
 
 pluq_SOURCES=pluq.C
 ftrtri_SOURCES=ftrtri.C
+fsytrf_SOURCES=fsytrf.C
 charpoly_Danilevskii_LUK_SOURCES=charpoly.C
 charpoly_Danilevskii_LUK_CXXFLAGS=$(AM_CXXFLAGS) -DVARIANT1="FfpackDanilevski" -DVARIANT2="FfpackLUK" -DNSTART=32 -DNFIRSTSTEP=32 -DNMAX=1000 -DNPREC=1 -DITER=500
 charpoly_LUK_ArithProg_SOURCES=charpoly.C
 charpoly_LUK_ArithProg_CXXFLAGS=$(AM_CXXFLAGS) -DVARIANT1="FfpackLUK" -DVARIANT2="FfpackArithProg" -DNSTART=1024 -DNFIRSTSTEP=128 -DNMAX=3000 -DNPREC=8 -DITER=1
 arithprog_SOURCES=arithprog.C
-#arithprog_CXXFLAGS=$(AM_CXXFLAGS)
+#arithprog_CXXFLAGS=$(#AM_CXXFLAGS)
 winograd_modular_float_SOURCES=winograd.C
 winograd_modular_float_CXXFLAGS=$(AM_CXXFLAGS) -DFIELD="Givaro::Modular<float>"
 winograd_modular_double_SOURCES=winograd.C
