--- a/autotune/Makefile.am
+++ b/autotune/Makefile.am
@@ -30,7 +30,7 @@ AUTOTUNE_CHARPOLY = charpoly-LUK-ArithProg charpoly-Danilevskii-LUK arithprog
 AUTOTUNE_FTRTRI = ftrtri
 AUTOTUNE_FSYTRF = fsytrf
 
-AUTOTUNE = $(AUTOTUNE_FGEMM) $(AUTOTUNE_PLUQ) $(AUTOTUNE_CHARPOLY) $(AUTOTUNE_FTRTRI) $(AUOTUNE_FSYTRF)
+AUTOTUNE = $(AUTOTUNE_FGEMM) $(AUTOTUNE_PLUQ) $(AUTOTUNE_CHARPOLY) $(AUTOTUNE_FTRTRI) $(AUTOTUNE_FSYTRF)
 
 EXTRA_PROGRAMS=$(AUTOTUNE)
 EXTRA_DIST=tune_fgemm.sh tune_pluq.sh tune_charpoly.sh tune_ftrtri.sh tune_fsytrf.sh
